--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <img src="https://www.google.com/search?q=edg&tbm=isch&ved=2ahUKEwj7namVle_2AhUjIn0KHZ7FAfkQ2-cCegQIABAA&oq=edg&gs_lcp=CgNpbWcQA1AAWABgAGgAcAB4AIABAIgBAJIBAJgBAKoBC2d3cy13aXotaW1n&sclient=img&ei=b_9EYruqO6PE9AOei4fIDw&bih=986&biw=1792#imgrc=BVdcgwHUX9cG1M"
+          title="Sushi" style = "width:100px; height:100px">
     </body>
 </html>
