--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         <video controls>
             <source src="tiktok.mp4">
         </video>
+
+        <h2>Iframe Youtube</h2>
+        <iframe width="900" height="500" src="https://www.youtube.com/embed/aEAAeYzbV1M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+        <h2>GoogleMap Youtube</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43003.47184916912!2d-122.32082861448342!3d47.651066193873795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490159a40e1898d%3A0x5b046dd8c40292a1!2sIshoni%20Yakiniku!5e0!3m2!1szh-CN!2sus!4v1648691434638!5m2!1szh-CN!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </body>
 </html>
